crates/formats/src/snapshots/knot_formats__zoning__tests__expression_macro.snap
---
source: crates/formats/src/zoning.rs
expression: zones.debug_dump(&body)
---
=== Leaves ===
  [   0..   5) MacroTag(Expression name=<<=>> kind=Unknown)  body=None | "<<=>>"
  [   5..  16) Prose                                         body=None | "$x.length>>"

=== Bodies ===
  (none)
