crates/formats/src/snapshots/knot_formats__zoning__tests__inline_style_with_link.snap
---
source: crates/formats/src/zoning.rs
expression: zones.debug_dump(&body)
---
=== Leaves ===
  [   0..   8) Markup(InlineStyle)                           body=None | "@@class;"
  [   8..  16) Markup(Link)                                  body=None | "[[link]]"
  [  16..  18) Markup(InlineStyle)                           body=None | "@@"

=== Bodies ===
  (none)
