crates/formats/src/snapshots/knot_formats__zoning__tests__orphan_close_tag.snap
---
source: crates/formats/src/zoning.rs
expression: zones.debug_dump(&body)
---
=== Leaves ===
  [   0..   4) Prose                                         body=None | "text"
  [   4..  11) Error(OrphanClose: "Unexpected close tag: <</if>>") body=None | "<</if>>"

=== Bodies ===
  (none)
