crates/formats/src/snapshots/knot_formats__zoning__tests__pure_prose.snap
---
source: crates/formats/src/zoning.rs
expression: zones.debug_dump(&body)
---
=== Leaves ===
  [   0..  11) Prose                                         body=None | "Hello world"

=== Bodies ===
  (none)
